--- a/Round2/Pages/StackLayoutPage.xaml
+++ b/Round2/Pages/StackLayoutPage.xaml
@@ -2,12 +2,15 @@
 <ContentPage 
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-    x:Class="Round2.Pages.StackLayout"
-    BackgroundColor="Aqua">
+    x:Class="Round2.Pages.StackLayoutPage"
+    BackgroundColor="Pink">
 
     <StackLayout
         HorizontalOptions="Center"
         VerticalOptions="Center">
+
+      <Label
+            Text="BamBam" />
 
         <Slider/>
 
